Fixed collapsed inlines rounded bottom borders.

--- a/admin_interface/templates/admin_interface/css/admin-interface.css
+++ b/admin_interface/templates/admin_interface/css/admin-interface.css
@@ -431,6 +431,14 @@
     border-bottom-right-radius:0;
     {% endif %}
 }
+
+.admin-interface .module.collapse.collapsed h2 {
+    /* fix collapsed inlines rounded bottom borders */
+    {% if theme.css_module_rounded_corners %}
+    border-bottom-left-radius:4px;
+    border-bottom-right-radius:4px;
+    {% endif %}
+}
 /* end fix */
 
 .admin-interface #content-related {
